# wasm-rust-labs

./: README.md  vite.config.ts
rust-libs/: Cargo.toml
rust-libs/snake/: Cargo.toml
rust-libs/snake/src/: lib.rs
src/pages/: Calculator.tsx  Snake.tsx
